# script-lang

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  jest.config.js  package-lock.json  package.json  requirements.txt  tsconfig.json
scriptlang/: CMakeLists.txt
scriptlang/cmake/: add_script_lang.cmake
scriptlang/include/scriptlang/lib/basic/: diagnostic.def  diagnostic.hpp  printer.hpp  version.hpp
scriptlang/include/scriptlang/lib/codegen/: codegen.hpp  ir_coverter.hpp
scriptlang/include/scriptlang/lib/parser/: ast.hpp  parse.hpp
scriptlang/include/scriptlang/lib/sematic/: decl_manager.hpp  hir.hpp  hir.inc  hir_coverter.hpp  sematic.hpp  type_checker.hpp  type_system.hpp
scriptlang/lib/: CMakeLists.txt
scriptlang/lib/basic/: CMakeLists.txt  diagnostic.cpp  version.cpp
scriptlang/lib/codegen/: CMakeLists.txt  codegen.cpp  ir_coverter.cpp
scriptlang/lib/parser/: CMakeLists.txt  ast.cpp  parse.cpp  printer.cpp  scriptlang.g4
scriptlang/lib/sematic/: CMakeLists.txt  decl_manager.cpp  hir.cpp  hir_covertor.cpp  hir_type.cpp  sematic.cpp  type_checker.cpp  type_system.cpp
scriptlang/test/: binary.ts  call.ts  codegen.test.ts  declare.ts  func_declare.ts  lit.cfg.py
scriptlang/test/__snapshots__/: codegen.test.ts.snap
scriptlang/test/codegen/: binary.ts  call.ts  declare.ts  func_declare.ts  if.ts  index.d.ts  while.ts
scriptlang/tools/: CMakeLists.txt
scriptlang/tools/driver/: CMakeLists.txt  driver.cpp
